# bridge_learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cc  readme.md  temp2.cc  test.cc
bridge_lib/: CMakeLists.txt  auction_tracker.cc  auction_tracker.h  bridge_card.cc  bridge_card.h  bridge_deck.cc  bridge_deck.h  bridge_game.cc  bridge_game.h  bridge_hand.cc  bridge_hand.h  bridge_history_item.cc  bridge_history_item.h  bridge_move.cc  bridge_move.h  bridge_observation.cc  bridge_observation.h  bridge_scoring.cc  bridge_scoring.h  bridge_state.cc  bridge_state.h  bridge_state_2.cc  bridge_state_2.h  bridge_test.cc  bridge_utils.cc  bridge_utils.h  canonical_encoder.cc  canonical_encoder.h  dnns_encoder.cc  dnns_encoder.h  example_cards_ddts.h  game_example.cc  jps_encoder.cc  jps_encoder.h  observation_encoder.h  pbe_encoder.cc  pbe_encoder.h  trick.cc  trick.h  utils.cc  (+1 more)
conf/: net.yaml  sl.yaml
lstm_sl/exp1/: log.txt
lstm_sl/exp2/: log.txt
lstm_sl/exp3/: log.txt
lstm_sl/exp4/: log.txt
outputs/2024-02-15/10-43-01/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-15/10-50-42/.hydra/: hydra.yaml
outputs/2024-02-15/10-51-59/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2024-02-15/10-55-35/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-15/11-17-08/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-15/11-54-20/.hydra/: config.yaml  hydra.yaml
outputs/2024-02-15/11-55-26/.hydra/: hydra.yaml
playcc/: alpha_mu_bot.cc  alpha_mu_bot.h  alpha_mu_search.cc  alpha_mu_search.h  alpha_mu_searcher.cc  alpha_mu_searcher.h  analyze_from_traj_and_tt.cc  belief_based_opening_lead_bot.cc  belief_based_opening_lead_bot.h  bridge_state_without_hidden_info.cc  bridge_state_without_hidden_info.h  cheat_bot.h  dds_bot.cc  dds_bot.h  dds_evaluator.cc  dds_evaluator.h  deal_analyzer.cc  deal_analyzer.h  deck_sampler.h  duplicate_threadloop.cc  duplicate_threadloop.h  file.cc  file.h  game_tree.h  log_utils.cc  log_utils.h  log_utils_test.cc  logger.h  match.cc  match2.cc  nn_belief_resampler.cc  nn_belief_resampler.h  opening_lead_evaluation_thread_loop.cc  opening_lead_evaluation_thread_loop.h  outcome_vector.cc  outcome_vector.h  pareto_front.cc  pareto_front.h  pareto_front_test.cc  pimc.cc  (+27 more)
playcc/common_utils/: file.cc  log_utils.h  stat_manager.h  stopwatch.h  threaded_queue.h
playcc/sayc/: constraints.cc  constraints.h  hand_analyzer.h  hand_info.cc  hand_info.h  named_enum.cc  named_enum.h  range.h  sayc_bot.cc  sayc_bot.h  utils.cc  utils.h
playcc/unit_tests/: constraint_test.cc  log_utils_test.cc  pareto_front_test.cc  sayc_bot_test.cc  sayc_utils_test.cc  transposition_table_test.cc
pybridge/: agent.py  bluechip_bridge.py  bridge.pyi  bridgelearn.pyi  create_bridge.py  net.py  nets.py  play_against_wbridge5.py  play_bot.py  pybind.cc  rela.pyi  set_path.py  smoke_test.py  temp.py  temp2.py  test_sl.py  wbridge5_client.py
pybridge/common_utils/: __init__.py  array_utils.py  mem_utils.py  saver.py
pysrc/: agent.py  bba_bot.py  bluechip_bot.py  bluechip_bridge.py  bridge.pyi  bridgelearn.pyi  bridgeplay.pyi  compare_model_execution_time.py  compute_sl_metric.py  console_play.py  create_bridge.py  duplicate_save_item.py  evaluate_alpha_mu.py  evaluate_belief_net.py  evaluate_declarer_play.py  evaluate_declarer_play2.py  evaluate_declarer_play_against_wbridge5.py  evaluate_opening_lead.py  evaluate_opening_lead2.py  evaluation.py  ffwd_a2c.py  ffwd_net_sl.py  lstm_net_sl.py  net.py  play_against_wbridge5.py  play_bot.py  pyrela.pyi  rela.pyi  rule_based_bot.py  rule_based_resampler.py  set_path.py  smoke_test.py  solve_playing_problem.py  supervised_learn.py  supervised_learn2.py  temp.py  temp2.py  temp3.py  test_belief.py  test_belief_he.py  (+8 more)
pysrc/bba/: EPBot64.pyi  EPBot64.tlb  EPBot86.tlb  __init__.py  bba_link.py  utils.py
pysrc/common_utils/: __init__.py  array_utils.py  assert_utils.py  file_utils.py  logger.py  other_utils.py  saver.py  stopwatch.py  torch_utils.py  value_stats.py
pysrc/conf/: a2c.yaml  compare_model_execution_time.yaml  console_play.yaml  declarer_play.yaml  declarer_play_against_wbridge5.yaml  evaluate_belief_net.yaml  ffwd_a2c.yaml  game.yaml  net2.yaml  opening_lead.yaml  policy_sl.yaml  solve_playing_problem.yaml  train_belief.yaml
pysrc/conf/belief_net/: belief.yaml
pysrc/conf/bidding_system/: 21GF.bbsa
pysrc/conf/jps_a2c/: a2c.yaml
pysrc/conf/net/: net.yaml
pysrc/conf/optimizer/: adam.yaml
pysrc/conf/value_net/: net.yaml
pysrc/other_models/: __init__.py  dnns.py  jps_a2c.py  jps_model.py  legacy_model.py  model_utils.py  pbe_model.py  pi_model.py
rela/: batch_runner.cc  batch_runner.h  batcher.cc  batcher.h  context.cc  context.h  logging.h  model.cc  model.h  model_common.h  model_locker.cc  model_locker.h  multistep_transition_buffer.h  prioritized_replay.h  prioritized_replay2.cc  prioritized_replay2.h  pybind.cc  r2d2.h  readme.md  static_batcher.h  tensor_dict.h  thread_loop.h  transition.cc  transition.h  types.h  utils.h
results/: opening_lead.md  result2.md  sl.md
rlcc/: actor_based_belief_gen.cc  actor_based_belief_gen.h  belief_data_gen.cc  belief_data_gen.h  bridge_actor.cc  bridge_actor.h  bridge_agent.cc  bridge_agent.h  bridge_dataset.cc  bridge_dataset.h  bridge_env.cc  bridge_env.h  bridge_env_actor.h  bridge_env_new.h  clone_data_generator.cc  clone_data_generator.h  detailed_encoder.cc  detailed_encoder.cpp  detailed_encoder.h  duplicate_env.cc  duplicate_env.h  encoder_registerer.cc  encoder_registerer.h  env.h  env_actor.h  env_actor_thread_loop.h  game_actor_transition_buffer.h  pybind.cc  rnn_buffer.h  supervise_data_generator.h  utils.cc  utils.h
scripts/: download_rl_dataset.sh
